syntax = "proto3";

package mutex;

service MutexService {
  rpc RequestToken (TokenRequest) returns (EmptyMessage);
  rpc TransferToken (TokenMessage) returns (EmptyMessage);
  rpc Discover (DiscoverMessage) returns (EmptyMessage);
}

message TokenRequest {
  string requester = 1;
  int32 sequenceNumber = 2;
  int32 ts = 3;
}

message TokenMessage {
  string curHolder = 1;
  map<string, int32> curHolderReqNumbers = 2;
  repeated string queue = 3;
  map<string, int32> lastGranted = 4;
  int32 ts = 5;
  int32 data = 6;
}

message DiscoverMessage {
  string id = 1;
  string targetIp = 2;
  string targetStatus = 3;
  string senderIp = 4;
}

message EmptyMessage {}